--- a/index.html
+++ b/index.html
@@ -35,10 +35,7 @@
                 <h5>Actor / Performer / Model</h5>
             </div>
         </div>
-        <div class="image" style="width: 50%;
-float: right;
-overflow: hidden;
-margin-top: -232px;">
+        <div class="image">
             <div class="picture">
 
                 <img src="images/image.jpg">
@@ -101,12 +98,12 @@ margin-top: -232px;">
       	
       	<h1>Photos</h1>
       	<div class="photos">
-      		<div class="column-1"><img src="images/image-1.jpg"style="width: 300px;">
-      		<img src="images/image-2.jpg"style="width:500px;">
-      		<img src="images/image-3.jpg" style="width:488px;"></div>
-      		<div class="column-2"><img src="images/image-4.jpg" style="width: 504.5px;">
-      		<img src="images/image-5.jpg">
-      		<img src="images/image-6.jpg"></div>
+      		<div class="column-1"><img src="images/image-1.jpg"style="width: 22%;">
+      		<img src="images/image-2.jpg"style="width:42%;">
+      		<img src="images/image-3.jpg" style="width:40%;"></div>
+      		<div class="column-2"><img src="images/image-4.jpg" style="width: 42%";>
+      		<img src="images/image-5.jpg" style="width: 42%;">
+      		<img src="images/image-6.jpg" style="width: 20%;"></div>
 
 
 
@@ -150,10 +147,10 @@ margin-top: -232px;">
          </div>
 
                   <ul>
-                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+                    <li><a class="icon" href="#"><i class="fab fa-facebook-f"></i></a></li>
+                    <li><a class="icon" href="#"><i class="fab fa-twitter"></i></a></li>
+                    <li><a class="icon" href="#"><i class="fab fa-instagram"></i></a></li>
+                    <li><a class="icon" href="#"><i class="fab fa-youtube"></i></a></li>
                 </ul>
      </div> 
 
